--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^1.2.0",
     "@reduxjs/toolkit": "^1.8.5",
     "next": "latest",
     "react": "18.1.0",
