--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@metamask/detect-provider": "^1.2.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@types/nprogress": "^0.2.0",
+    "ethers": "^5.7.1",
     "next": "latest",
     "nprogress": "^0.2.0",
     "react": "18.1.0",
