--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nprogress": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
